golden/error/parse_multi_statement_no_end.test
-- @begin drop_schema()
DROP TABLE tracks;
DROP TABLE albums;
-- Note the missing @end marker (this one doesn't count, it's not at the start)
-- after the next statement.
DROP TABLE artists;


 --> stdin:7:0
  |
7 | 
  | ^
Error: Expected a SQL statement here.
